--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,3 +23,11 @@ a {
   max-width: 960px;
   margin: auto;
 }
+
+.drawer-toggle ~ .drawer-side {
+  position: absolute;
+}
+
+.drawer-toggle:checked ~ .drawer-side {
+  position: initial;
+}
