--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -12,7 +12,19 @@
 }
 
 .bg {
-  background-image: url("../public/header.jpg");
+  /* background-image: url("../public/header.jpg"); */
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+}
+
+.hero-overlay {
+  z-index: 0;
 }
 
 .hello:after {
