--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,10 @@ body {
     Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+body {
+  scroll-behavior: smooth;
+}
+
 a {
   color: inherit;
   text-decoration: none;
