--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,8 @@ body {
     Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
   background: aliceblue;
+  height: 100%;
+  width: 100%;
 
   @apply text-slate-800;
 }
