--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,7 @@ body {
     Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
   background: aliceblue;
-  height: 100%;
+  /* height: 100%; */
   width: 100%;
 
   @apply text-slate-800;
